Bug 574588 - nsAccessible::GetRole() should avoid a11y tree traversal, r=davidb, a=davidb